--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
+  
+.App  {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  min-height: 100vh;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: antiquewhite;
+  background-image: linear-gradient(79deg, #8f5cf5, #f54141 48%, #ba4c02);
 }
 
-.App-link {
-  color: #61dafb;
-}
+  .authentictor-form, .login-user, .register-user{
+    display: flex;
+    flex-direction: column;
+    
+    
+  }
+  @media screen and (min-width: 600px ) {
+    .authentictor-form {
+      padding: 5rem;
+      border: 1px solid white;
+      border-radius: 10px;
+      margin: 0.5rem;
+    }
+  }
+  
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  label {
+    text-align: left;
+    padding: 0.25rem 0;
+    
   }
-  to {
-    transform: rotate(360deg);
+  label.App-Header{
+    text-align: center
   }
-}
+
+  input{
+    margin: 0.5rem 0;
+    padding: 1rem;
+    border: none;
+    border-radius: 10px;
+    
+    
+  }
+
+  button{
+    border: none;
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    
+  }
+  
+  
+
+  .link-button{
+    background: none;
+    color: black;
+    text-decoration: underline;
+    cursor: pointer;
+  }
